docs: add schemas
